--- a/_data/teaching.yaml
+++ b/_data/teaching.yaml
@@ -1,6 +1,6 @@
 # _data/teaching.yaml
 html: |
     <ul>
+        <li><strong>Student Volunteer</strong> for Cornell <a href="https://chen.tech.cornell.edu/ECE5290/">ECE 5290/7290 & ORIE 5290: Distributed Optimization for Machine Learning and AI</a>, Fall 2025</li>
         <li><strong>Guest Lecturer</strong> for RPI ECSE-4964/6964 Distributed Optimization & Machine Learning, Spring 2025</li>
-        <li><strong>Guest Lecturer</strong> for RPI ECSE-2500 <a href="https://catalog.rpi.edu/preview_course_nopop.php?catoid=10&coid=16685">Engineering Probability</a>, Fall 2024</li>
     </ul>
